--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
-body{
-    background-color: rgb(202, 214, 147);
-}
+body {
+    background-image: linear-gradient(135deg, #75ad93 10%, #9bee58 100%);background-repeat: no-repeat;
+    background-attachment: fixed;
+    color: #333333;
+  }
+  
 
 *{
     margin: 0;
@@ -42,7 +45,7 @@ nav ul li{
 }
 .log-sign ul li a:hover{
     cursor: pointer;
-    background-color: rgb(202, 214, 147);
+    background-image: linear-gradient(135deg, #70F570 10%, #49C628 100%);
     color: black;
     border-radius: 15px;
     padding: 12px;
@@ -246,3 +249,191 @@ input[type="range"]::-webkit-slider-thumb {
     }
    
 }
+
+
+/* Login.html style */
+/* .login-container{
+    font-family: 'Varela Round', sans-serif;
+    width: 500px;
+    height: 400px;
+    background-color: white;
+    color: black;
+    margin: auto;
+    padding: 10px;
+    border-radius: 15px;
+}
+.login-details{
+    margin-top: 25px;
+}
+input[type=text],input[type=password]{
+    margin-left: 20px;
+    border: none;
+    border-bottom: 1px solid black;
+    
+}
+input[type=text]:focus{
+    border: none;
+}
+
+::-webkit-input-placeholder{
+    padding: 5px;
+    font-size: 12px;
+    color: rgba(255, 1, 35, 0.5);
+}
+.btn-submit{
+    border: none;
+    margin-top: 25px;
+    padding: 7px;
+    border-radius: 7px;
+    background-color: #71be75;
+}
+.btn-submit:hover{
+    cursor:pointer;
+    background-color: #cad693
+} */
+
+
+
+  
+.box-form {
+    width: 550px;
+    margin: 0 auto;
+    background: #f8f8f8;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    box-shadow: 0 0 20px 6px #090b6f85;
+  }
+ 
+  .box-form div {
+    height: auto;
+  }
+ 
+  .box-form .right {
+    padding: 40px;
+  }
+  
+  .box-form .right h5 {
+    font-size: 2rem;
+    line-height: 0;
+    font-family: 'Ubuntu', sans-serif;
+    color: rgb(5, 5, 5);
+
+  }
+  .box-form .right p {
+    font-size: 14px;
+    color: #B0B3B9;
+  }
+ 
+  .box-form .right input {
+    width: 100%;
+    padding: 10px;
+    margin-top: 25px;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #B0B3B9;
+  }
+  .box-form .right .remember-me--forget-password {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+  }
+  .box-form .right .remember-me--forget-password input {
+    margin: 0;
+    margin-right: 7px;
+    width: auto;
+  }
+ .btn-login,.btn-signup{
+    display: flex;
+    color: #fff;
+    font-size: 16px;
+    padding: 12px 35px;
+    border-radius: 50px;
+    display: inline-block;
+    border: 0;
+    outline: 0;
+    box-shadow: 0px 4px 20px 0px #49c628a6;
+    background-image: linear-gradient(135deg, #70F570 10%, #49C628 100%);
+    margin-bottom: 5px;
+}
+.btn-login:hover,.btn-signup:hover{
+    cursor: pointer;
+    border: 1px solid rgb(168, 122, 122);
+}
+.btn-login{
+    margin-top: -70px;
+  }
+  label {
+    display: block;
+    position: relative;
+    margin-left: 30px;
+  }
+  
+  label::before {
+    content: ' \f00c';
+    position: absolute;
+    font-family: FontAwesome;
+    background: transparent;
+    border: 3px solid #70F570;
+    border-radius: 4px;
+    color: transparent;
+    left: -30px;
+    transition: all 0.2s linear;
+  }
+  
+  label:hover::before {
+    content: ' \f00c';
+    color: #fff;
+    cursor: pointer;
+    background: #70F570;
+  }
+  
+  label:hover::before .text-checkbox {
+    background: #70F570;
+  }
+  
+  label span.text-checkbox {
+    display: inline-block;
+    height: 50px;
+    position: relative;
+    cursor: pointer;
+    transition: all 0.2s linear;
+  }
+  
+  label input[type="checkbox"] {
+    display: none;
+  }
+  @media (max-width: 980px) {
+    .box-form {
+      flex-flow: wrap;
+      text-align: center;
+      align-content: center;
+      align-items: center;
+    }
+  }
+  @media (max-width: 980px) {
+    .box-form .right {
+      width: 100%;
+    }
+  }
+  @media (max-width:400px) {
+      .box-form{
+          width: 90%;
+      }
+      .btn-login {
+          margin-top: -40px;
+      }
+      .box-form .right p {
+        font-size: 12px;
+    }
+    .box-form .right input {
+    font-size: 14px;
+    }
+    .text-checkbox{
+        height: 25px;
+        font-size: 14px;
+    }
+  }
