--- a/style.css
+++ b/style.css
@@ -333,7 +333,9 @@ input[type=text]:focus{
     font-size: 16px;
     border: none;
     outline: none;
-    border-bottom: 2px solid #1afa70;
+    border-bottom: 2px solid #00ff62a8;
+    background: transparent;
+    background-color: rgba(0, 0, 0, 0);
   }
   .box-form .right .remember-me--forget-password {
     display: flex;
